--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-useful-swiper": "^5.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
+    "swiper": "^3.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
